--- a/app/index.template.html
+++ b/app/index.template.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div id="app">
-      {{message}}
+      <h1>{{title}}</h1>
+      <p>{{description}}</p>
     </div>
   </body>
 </html>
