Add vue bindings.

--- a/app/index.template.html
+++ b/app/index.template.html
@@ -9,6 +9,8 @@
     <div id="app">
       <h1>{{title}}</h1>
       <p>{{description}}</p>
+
+      <quote-panel quote="quote" quote-author="quoteAuthor"></quote-panel>
     </div>
   </body>
 </html>
