--- a/app/index.template.html
+++ b/app/index.template.html
@@ -7,13 +7,29 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{title}}</h1>
-      <p>{{description}}</p>
+      <section>
+        Templates
+        <h1>{{title}}</h1>
+        <p>{{description}}</p>
+      </section>
+      <hr>
+      <section>
+        Parent -> Child
+        <quote-panel v-bind:quote="quote" v-bind:quote-author="quoteAuthor"></quote-panel>
+      </section>
+      <hr>
+      <section>
+        Input
+        <label>You typed: {{whatDidYouType}}</label>
+        <input v-model="whatDidYouType"></input>
+      </section>
+      <hr>
+      <section>
+        Child -> Parent Component Communication (Data return)
+        <label>You typed: {{whatDidYouType2}}</label>
+        <text-input v-bind:value.sync="whatDidYouType2"></text-input>
+      </section>
 
-      <quote-panel v-bind:quote="quote" v-bind:quote-author.sync="quoteAuthor"></quote-panel>
-
-      <label>Quote by</label>
-      <input v-model="quoteAuthor"></input>
     </div>
   </body>
 </html>
