--- a/app/index.template.html
+++ b/app/index.template.html
@@ -69,6 +69,15 @@
         <button v-on:click="big = !big">change size</button>
       </section>
       <hr>
+      <section>
+        Transclusion test<br/>
+        <div>
+          <transclusion>
+            This should appear.
+          </transclusion>
+        </div>
+      </section>
+      <hr>
     </div>
   </body>
 </html>
