--- a/app/index.template.html
+++ b/app/index.template.html
@@ -39,6 +39,12 @@
       <section>
         Request loading<br/>
         <button v-on:click="loadUsers()">Load users</button>
+        <ul>
+          <li v-for="user in users" track-by="id">
+            {{user.first_name}}
+          </li>
+        </ul>
+
       </section>
       <hr>
       <section>
