Fix advanced page

--- a/app/modules/examples/examples-advanced-page.html
+++ b/app/modules/examples/examples-advanced-page.html
@@ -1,1 +1,3 @@
-A collection of advanced examples.
+<section class="examples-advanced-page">
+  <h1>A collection of advanced examples.</h1>
+</section>
