Add advanced examples of data loading

--- a/app/modules/examples/examples-advanced-page.html
+++ b/app/modules/examples/examples-advanced-page.html
@@ -1,3 +1,22 @@
 <section class="examples-advanced-page">
   <h1>A collection of advanced examples.</h1>
+  <hr>
+  <section>
+    Data load on page load<br/>
+    <div>
+      {{user.first_name}} {{ user.last_name }}
+    </div>
+  </section>
+  <section>
+    Data load on page load from query param<br/>
+    <div>
+      {{user2.first_name}} {{ user2.last_name }}
+    </div>
+  </section>
+  <section>
+    Data load on page load from path param<br/>
+    <div>
+      {{user3.first_name}} {{ user3.last_name }}
+    </div>
+  </section>
 </section>
