--- a/app/index.template.html
+++ b/app/index.template.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <section id="app">
-      <router-view></router-view>
+      <router-view name="root-router-view"></router-view>
     </section>
   </body>
 </html>
