Add link to github

--- a/app/modules/navigation/navigation-component.html
+++ b/app/modules/navigation/navigation-component.html
@@ -6,5 +6,8 @@
     <li>
       <router-link v-bind:to="{name: 'advanced', params: {uid: 2}, query: {id: 4}}">Advanced Examples</router-link>
     </li>
+    <li>
+      <a href="https://github.com/jgefroh/vue-rd">Github</a>
+    </li>
   </ul>
 </section>
