--- a/app/index.template.html
+++ b/app/index.template.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body>
-    <section id="app">
+    <section id="app" class="app">
       <router-view name="root-router-view"></router-view>
     </section>
   </body>
