--- a/app/modules/navigation/navigation-component.html
+++ b/app/modules/navigation/navigation-component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="navigation-component">
   <ul>
     <li>
       <router-link v-bind:to="{name: 'basic'}">Basic Examples</router-link>
