--- a/app/modules/navigation/navigation-component.html
+++ b/app/modules/navigation/navigation-component.html
@@ -7,6 +7,10 @@
       <router-link v-bind:to="{name: 'advanced', params: {uid: 2}, query: {id: 4}}">Advanced Examples</router-link>
     </li>
     <li>
+      <router-link v-bind:to="{name: 'form'}">Form Demo</router-link>
+    </li>
+    <hr>
+    <li>
       <a href="https://github.com/jgefroh/vue-rd">Github</a>
     </li>
   </ul>
