--- a/app/modules/examples/examples-form-page.html
+++ b/app/modules/examples/examples-form-page.html
@@ -1,5 +1,5 @@
 <section>
-  <text-input label="Amount" v-bind:value.sync="input.amount" placeholder="0.00" type="tel"/>
+  <amount-input label="Amount" v-bind:value.sync="input.amount"/>
   <hr>
   <text-input label="First Name" v-bind:value.sync="input.first_name" />
   <text-input label="Last Name" v-bind:value.sync="input.last_name" />
