--- a/app/modules/examples/examples-modal-page.html
+++ b/app/modules/examples/examples-modal-page.html
@@ -1,4 +1,5 @@
 <section>
   <h1>LAUNCH THE MODAL</h1>
   <button v-on:click="launchModal()">Launch</button>
+  You entered {{modalValue}} on the modal.
 </section>
