Create color picker

--- a/app/modules/navigation/navigation-component.html
+++ b/app/modules/navigation/navigation-component.html
@@ -12,6 +12,9 @@
     <li>
       <router-link v-bind:to="{name: 'modal'}">Modal Demo</router-link>
     </li>
+    <li>
+      <router-link v-bind:to="{name: 'components'}">Components Demo</router-link>
+    </li>
     <hr>
     <li>
       <a href="https://github.com/jgefroh/vue-rd">Github</a>
